# person_recognizer

./: #README.md#  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build-deps.sh  package.xml  personrecognizer_plugins.xml
docs/html/: index.html  md_README.html  pages.html
docs/latex/: md_README.tex  refman.tex
include/: ComputationMode.h  FaceDetector.h  FaceDetector.h~
launch/: person_recognizer.launch  person_recognizer_nodelet.launch
msg/: Face.msg  Gender.msg  Gender.msg~  SimpleImage.msg~
nodes/: #person_recognizer_client.py#  gender_recognizer.py  person_recognizer_client.py  person_recognizer_client.py~  person_recognizer_server.py  person_recognizer_server.py~
scripts/: #person_recognizer_client.py#  gender_recognizer.py  name_extractor.py  person_recognizer.py  person_recognizer.py~  person_recognizer_client.py
src/: FaceDetector.cpp  facedetector_node.cpp  facedetector_nodelet.cpp  facedetector_nodelet.cpp~
